# pico_testing_in_C

./: README.md
Adafruit_BME280_multi/: Adafruit_BME280.c  Adafruit_BME280.h  Adafruit_BME280_multi.c  Adafruit_BME280_multi_dma.c  Adafruit_BME280_multi_sem.c  CMakeLists.txt  SparkFun_Alphanumeric_Display.h
BME68X_API/: CMakeLists.txt  bme68x.c  bme68x.h  bme68x_defs.h  common.c  common.h  main.c
SparkFun_Qwiic_Display/: CMakeLists.txt  SparkFun_Alphanumeric_Display.c  SparkFun_Qwiic_Display.c
Sparkfun_serial_display/: CMakeLists.txt  Sparkfun_serial_display.c
Sparkfun_serial_display_multi/: CMakeLists.txt  Sparkfun_serial_display_multi.c  blink_zip_led.c
blink_zip_led/: CMakeLists.txt  blink_zip_led.c
full_feature_template_Pico_W_wireless/: CMakeLists.txt  original.c
full_feature_template_Pico_W_wireless/SparkFun_Qwiic_Display/: CMakeLists.txt
